admission/ValidatingAdmissionPolicy/policies/prestop-tcpsocket-host/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prestop-tcpsocket-host-initcontainers
  annotations:
    kubeapt.io/uuid: "31b0e769-6283-4498-938f-f8d355d53586"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
